syntax = "proto3";

package v1;

message FilmEmptyRequest {

}

message FilmCategory {
    int32 id = 1;
    string name = 2;
    string description = 3;
    string image_url = 4;
}

message ChatStreamMessage {
    string name = 1;
    string message = 2;
}

message ChatStreamResponse {
    string message = 1;
}


service FilmsService {
    rpc ListFashionCategories(FilmEmptyRequest) returns (stream FilmCategory) {}
    rpc SendMessage(stream ChatStreamMessage) returns( stream ChatStreamResponse) {}
}
